@@ -2,6 +2,7 @@
 TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
+May 11 2015 (gazelle) Changed display of "adding/removing ships" in shipvendor sub-command
 May 10 2015 (kfsone) #234 Change display of "adding ship" in maddavo plugin
 
 v7.0.3 May 09 2015
